# fence-agents

./: .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  Makefile.top  Makefile.top.in  README  README.md  TODO  architecture.txt  autogen.sh  build  configure  configure.ac  configure.in  fence-agents.pc.in  fence-agents.spec.in  fence-virt.spec.in  fence_virt.txt  fence_virtd.init.in  fence_virtd.service.in
agents/: Makefile.am  fence_ibm_powervs.V4.py  ibm_powervs.V4
agents/ahv/: fence_ahv.py
agents/aliyun/: fence_aliyun.py
agents/alom/: fence_alom.py
agents/amt/: fence_amt.py
agents/amt_ws/: fence_amt_ws.py
agents/apc/: fence_apc.py
agents/apc_snmp/: fence_apc_snmp.py
agents/autodetect/: a.py  autodetect_test.py  fence_bladecenter.py  fence_brocade.py  fencing.py
agents/aws/: fence_aws.py
agents/aws_vpc/: fence_aws_vpc.py
agents/aws_vpc_net/: fence_aws_vpc_net.py  readme.md
agents/azure_arm/: fence_azure_arm.py
agents/bladecenter/: fence_bladecenter.py
agents/cdu/: fence_cdu.py
agents/cisco_mds/: fence_cisco_mds.py
agents/cisco_ucs/: fence_cisco_ucs.py
agents/compute/: fence_compute.py
agents/crosslink/: README.md  fence_crosslink.py
agents/cyberpower/: fence_cyberpower_ssh.py
agents/cyberpower_ssh/: fence_cyberpower_ssh.py
agents/docker/: fence_docker.py
agents/drac/: fence_drac.py
agents/drac5/: fence_drac5.py
agents/dummy/: README.md  fence_dummy.py
agents/eaton_snmp/: README  fence_eaton_snmp.py
agents/eaton_ssh/: fence_eaton_ssh.py
agents/ecloud/: fence_ecloud.py
agents/emerson/: fence_emerson.py
agents/eps/: fence_eps.py
agents/evacuate/: fence_evacuate.py
agents/gce/: fence_gce.py
agents/hds_cb/: fence_hds_cb.py
agents/hetzner_cloud/: fence_hetzner_cloud.py
agents/heuristics_ping/: fence_heuristics_ping.py
agents/heuristics_resource/: fence_heuristics_resource.py
agents/hpblade/: fence_hpblade.py
agents/ibm_powervs/: fence_ibm_powervs.py
agents/ibm_vpc/: fence_ibm_vpc.py
agents/ibmblade/: fence_ibmblade.py
agents/ibmz/: fence_ibmz.py
agents/ifmib/: README  fence_ifmib.py
agents/ilo/: fence_ilo.py
agents/ilo_moonshot/: fence_ilo_moonshot.py
agents/ilo_mp/: fence_ilo_mp.py
agents/ilo_ssh/: fence_ilo_ssh.py
agents/intelmodular/: fence_intelmodular.py
agents/ipdu/: fence_ipdu.py
agents/ipmilan/: fence_ipmilan.py
agents/ironic/: fence_ironic.py
agents/kdump/: fence_kdump.c  fence_kdump_send.8  fence_kdump_send.c  list.h  options.h  version.h
agents/kubevirt/: fence_kubevirt.py
agents/ldom/: fence_ldom.py
agents/lindy_pdu/: fence_lindypdu.py
agents/lpar/: fence_lpar.py
agents/manual/: fence_ack_manual.8
agents/mpath/: fence_mpath.py
agents/netio/: fence_netio.py
agents/nova/: fence_nova.py
agents/nutanix_ahv/: fence_nutanix_ahv.py
agents/openstack/: fence_openstack.py
agents/ovh/: fence_ovh.py
agents/ovh_cloud_rest/: fence_ovh_cloud_rest.py
agents/ovm/: fence_ovm.py
agents/powerman/: fence_powerman.py
agents/pve/: fence_pve.py
agents/raritan/: fence_raritan.py
agents/raritan_px3/: fence_raritan_px3.py
agents/rcd_serial/: fence_rcd_serial.py
agents/recorder/: Makefile.am  README.md  REQUEST-RESPONSE-PATTERN.md  external_fence_watcher.py  fence-watcher.service  fence_recorder.py
agents/redfish/: fence_redfish.py
agents/rhevm/: fence_rhevm.py
agents/rsa/: fence_rsa.py
agents/rsb/: fence_rsb.py
agents/sanbox2/: fence_sanbox2.py
agents/sbd/: fence_sbd.py
agents/scsi/: fence_scsi.py
agents/shelly/: fence_shelly_gen2.py
agents/skala-r/: fence_skalar.py
agents/skalar/: fence_skalar.py
agents/vbox/: fence_vbox.py
agents/virsh/: fence_virsh.py
agents/virt/: .gitignore  Makefile.am  README  fence-virt.spec.in  fence_virtd.service.in
agents/virt/build-aux/: git-version-gen
agents/virt/client/: Makefile.am  main.c  mcast.c  options.c  serial.c  tcp.c  vsock.c
agents/virt/common/: Makefile.am  debug.c  fdops.c  ip_lookup.c  log.c  simple_auth.c  tcp.c
agents/virt/config/: Makefile.am  config.l  config.y  simpleconfig.c
agents/virt/include/: client.h  mcast.h  options.h  server_plugin.h  simpleconfig.h  static_map.h
agents/virt/man/: .gitignore  Makefile.am  fence_virt.8  fence_virt.conf.5  fence_xvm.8
agents/virt/server/: Makefile.am  config.c  cpg-virt.c  cpg.c  daemon_init.c  history.c  libvirt-qmf.cpp  libvirt.c  main.c  mcast.c  null.c  plugin.c  serial.c  static_map.c  tcp.c  uuid-test.c  uuid-test.h  virt-serial.c  virt-sockets.c  virt.c  virt.h  vsock.c
agents/vmware/: fence_vmware.py
agents/vmware_rest/: fence_vmware_rest.py
agents/vmware_soap/: fence_vmware_soap.py
agents/vmware_vcloud/: fence_vmware_vcloud.py
agents/wti/: fence_wti.py
agents/xenapi/: fence_xenapi.py
agents/zvm/: fence_zvm.c  fence_zvm.h  fence_zvm_man_page  fence_zvmip.c  fence_zvmip.py
client/: Makefile  Makefile.am  Makefile.in  main.c  mcast.c  options.c  serial.c  tcp.c  vsock.c
fence/agents/: Makefile  Makefile.am
fence/agents/alom/: Makefile.am  fence_alom.py
fence/agents/amt/: Makefile.am  fence_amt.py
fence/agents/amt_ws/: Makefile.am  fence_amt_ws.py
fence/agents/apc/: Makefile.am  fence_apc.py
fence/agents/apc_snmp/: Makefile  Makefile.am  fence_apc_snmp.py
fence/agents/autodetect/: abc.py  autodetect.py  b.py  fence_apc.py  fence_brocade.py  (+4 more)
lib/: Makefile.am  XenAPI.py.py  azure_fence.py.py  check_used_options.py  fence.rng.head  fence.rng.tail  fence2man.xsl  fence2rng.xsl  fence2wiki.xsl  fencing.py.py  fencing_snmp.py.py  metadata.rng
lib/tests/: Makefile.am  test_fencing.py
man/: Makefile.am  Makefile.in  fence_virt.8  fence_virt.conf.5  fence_virtd.8  fence_virtd.conf.5  fence_xvm.8
server/: Makefile  Makefile.am  Makefile.in  checkpoint.c  checkpoint.h  config.c  cpg-virt.c  cpg.c  cpg.h  daemon_init.c  history.c  libvirt-qmf.cpp  libvirt-qpid.cpp  libvirt.c  main.c  mcast.c  null.c  options-ccs.c  plugin.c  pm-fence.c  pm_fence.c  serial.c  serial.h  static_map.c  tcp.c  uuid-test.c  uuid-test.h  virt-serial.c  virt-sockets.c  virt-sockets.h  virt.c  virt.h  vm_states.c  vsock.c
(+441 files in other folders)
